updated. with fat jar configuration. meta-inf added. event tab updated. password hashed.